# SRUI

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Srui.slnx  dist.ps1
.cargo/: config.toml
AotDemo/: AotDemo.csproj  Program.cs
AudioBench/: AudioBench.csproj  Program.cs
AudioExample/: AudioExample.csproj  Program.cs
MultiAppDemo/: MultiAppDemo.csproj  Program.cs
Srui.Audio/: AudioEngine.cs  BinauralPool.cs  CallbackStats.cs  M4bChapters.cs  MediaFoundationAudioSource.cs  NativeMethods.cs  OlaStretch.cs  PullAudioSource.cs  PushAudioSource.cs  Sound.cs  SoundEntity.cs  SoundFx.cs  SoundGroup.cs  SoundManager.cs  Tween.cs
Srui.Net/: EditBox.cs  Events.cs  FilterListBox.cs  Input.cs  ListBox.cs  MultiAppHost.cs  Slider.cs  Speech.cs  Srui.Net.csproj  SruiApp.cs  SruiDialogs.cs  TabControl.cs  Widget.cs  Widgets.cs
Srui.Net.Tests/: FocusIntrospectionTests.cs  FuzzyTests.cs  InputMapperTests.cs  InputMatchTests.cs  KeyComboTests.cs  KeyHelpTests.cs  LiveFilterTests.cs  M4bChapterTests.cs  MultiAppHostTests.cs  MultiSelectListTests.cs  NavTests.cs  PushAudioSourceTests.cs  SilentMutatorTests.cs  SpeechAndEventsTests.cs  Srui.Net.Tests.csproj  SurfaceTests.cs  TextNavTests.cs  TreeTests.cs  TypesTests.cs
Srui.Net/Core/: CoreUi.cs  EditorState.cs  FocusMemory.cs  Fuzzy.cs  Nav.cs  PrismNative.cs  Rope.cs  SpeechRenderer.cs  TextNav.cs  Types.cs
SruiDemo/: Program.cs  SoundWidgets.cs  SruiDemo.csproj  TableWidget.cs
SruiTasks/: HistoryEditBox.cs  Panels.cs  SruiTasks.csproj
docs/: accessibility-guidelines.md  architecture.md  shortcut-geometry.md
dotnet/: Srui.slnx
dotnet/AudioExample/: AudioExample.csproj  Program.cs
dotnet/Srui.Audio/: AudioEngine.cs  AudioException.cs  NativeMethods.cs  Sound.cs  SoundGroup.cs  SoundManager.cs  Srui.Audio.csproj  Volume.cs
dotnet/Srui.Net.Tests/: CoreUiTests.cs  EditBoxCoreTests.cs  EditorStateTests.cs  FuzzyTests.cs  InputMapperTests.cs  (+8 more)
native/: PATCHES-cosmos.md  PATCHES-prism.md  build-native.ps1
native/cosmos/: CMakeLists.txt  cosmos_extra.c  cosmos_media.c  ma_convreverb.h  ma_delay.h  ma_disperser.c  ma_disperser.h  ma_distortion.h  ma_eq.c  ma_vocoder.c  miniaudio_impl.c  miniaudio_phonon.c  miniaudio_phonon.h
native/cosmos/ogg/ogg/: config_types.h
srui-audio-native/: Cargo.toml  PATCHES.md  build.rs
srui-core/: Cargo.toml
srui-demo/: Cargo.toml
srui-ffi/: Cargo.toml
srui-prism/: Cargo.toml
srui-prism-sys/: Cargo.toml  PATCHES.md  build.rs
srui-sdl/: Cargo.toml
(+88 files in other folders)
